"initial commit with get by tweet id successful and post inprogress"